--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,125 +1,126 @@
 /* universal styles */
- * {
-   margin: 0;
-   padding: 0;
- }
+* {
+  margin: 0;
+  padding: 0;
+}
 
- html  {
-   background-color: black;
-   opacity: 0.9;
-   font-size: 22px;
-   color: seashell;
-   font-family: Helvetica;
- }
+html {
+  background-color: black;
+  opacity: 0.9;
+  font-size: 22px;
+  color: seashell;
+  font-family: Helvetica;
+}
 
- h2, h3, h4, h5 {
-   color: seashell;
-   font-family: Helvetica;
-   opacity: 0.9;
- }
+h2, h3, h4, h5 {
+  color: seashell;
+  font-family: Helvetica;
+  opacity: 0.9;
+}
 
- /* header */
+/* header */
 
- .header {
-   display: flex;
-   align-items: center;
-   height: 69px;
-   border-bottom: 1px solid seashell;
-   position: fixed;
-   top: 0;
-   left: 0;
-   right: 0;
-   background-color: black;
-   z-index: 1;
- }
-
- .header-logo {
-   flex-grow: 1;
-   padding-left: 10px;
- }
-
- .header-logo img {
-   height: 50px;
- }
-
- .header-navigation {
-   display: flex;
-   justify-content: flex-end;
-   padding-right: 10px;
-   width: 500px;
- }
-
- .header-navigation span {
-   text-decoration: underline;
-   padding-left: 15px;
- }
-
- /* our mission */
-
- .our-mission {
+.header {
   display: flex;
-  margin: 69px auto;
+  align-items: center;
+  height: 69px;
+  border-bottom: 1px solid seashell;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: black;
+  z-index: 1;
+}
+
+.header-logo {
+  flex-grow: 1;
+  padding-left: 10px;
+  height: 50px;
+}
+
+.header-logo img {
+  height: 50px;
+}
+
+.header-navigation {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 10px;
+  width: 500px;
+}
+
+.header-navigation span {
+  text-decoration: underline;
+  padding-left: 15px;
+}
+
+/* our mission */
+
+.our-mission {
+  display: flex;
+  margin: 70px auto;
   width: 1200px;
   height: 700px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
-  opacity: 0.9
- }
+  opacity: 0.9;
+}
 
- .our-mission-text {
-   display: flex;
-   flex-direction: column;
-   width: 1200px;
-   height: 100px;
-   align-items: center;
-   justify-content: center;
-   background-color: black;
- }
+.our-mission-text {
+  display: flex;
+  flex-direction: column;
+  width: 1200px;
+  height: 120px;
+  align-items: center;
+  justify-content: center;
+  background-color: black;
+}
 
- /* tea of the month */
- .tea-of-the-month {
+/* tea of the month */
+.tea-of-the-month {
   display: flex;
   flex-direction: column;
   text-align: center;
   width: 1000px;
   margin: 69px auto;
- }
+}
 
- .tea-of-the-month h4 {
+.tea-of-the-month h4 {
   margin-top: 10px;
   margin-bottom: 20px;
   height: auto;
- }
+}
 
- .tea-of-the-month h2 {
-   padding-bottom: 10px;
- }
+.tea-of-the-month h2 {
+  padding-bottom: 10px;
+}
 
- .tea-oftm-selection-first {
-   display: flex;
-   justify-content: space-between;
- }
+.tea-oftm-selection-first {
+  display: flex;
+  justify-content: space-between;
+}
 
- .tea-oftm-selection-second {
-   display: flex;
-   justify-content: center;
-   align-items: center;
- }
+.tea-oftm-selection-second {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
- .tea-of-the-month img {
-   width: 300px;
-   height: 200px;
- }
+.tea-of-the-month img {
+  width: 300px;
+  height: 200px;
+}
 
- .myrtle-ave {
+.myrtle-ave {
   padding-right: 25px;
- }
+}
 
- .bedford-bizarre {
-   padding-left: 25px;
- }
+.bedford-bizarre {
+  padding-left: 25px;
+}
 
 /* locations */
 
@@ -133,33 +134,32 @@
   width: 1200px;
   justify-content: center;
   align-items: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 0px;
-  margin-top: 69px;
+  margin: 0px auto;
 }
 
 .locations-header {
-  padding-bottom: 15px;
+  margin-bottom: 15px;
   background-color: transparent;
-  font-weight: bold;
 }
 
 .locations-boxes {
   display: flex;
-  }
+}
 
 .box {
-  width: 250px;
+  width: 300px;
   text-align: center;
   margin-right: 20px;
   margin-left: 20px;
   background-color: black;
-  padding: 8px;
+  padding-top: 20px;
+  opacity: 1;
 }
 
 .box span {
-  font-size: 20px;
+  font-size: 22px;
+  color: seashell;
+  font-family: Helvetica;
 }
 
 /* footer */
@@ -169,15 +169,14 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: 200px;
-  margin: 0px auto;
-  padding: 0px auto;
+  height: 190px;
+  margin: 10px auto;
 }
 
 /* copyright */
 
 .copyright, .contact-info {
-  padding-left: 20px;
+  margin-left: 20px;
   text-align: left;
   margin-bottom: 10px;
   font-size: 22px;
