--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,7 +12,7 @@ html {
   font-family: Helvetica;
 }
 
-h2, h3, h4, h5 {
+h2, h3, h4, h5, a {
   color: seashell;
   font-family: Helvetica;
   opacity: 0.9;
@@ -50,9 +50,14 @@ h2, h3, h4, h5 {
   width: 500px;
 }
 
-.header-navigation span {
+.header-navigation ul {
+  display: flex;
+  list-style: none;
+}
+
+.header-navigation li {
   text-decoration: underline;
-  padding-left: 15px;
+  padding-left: 20px;
 }
 
 /* our mission */
